k8s/Mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  ports:
    - port: 3308
      targetPort: 3306 # Mysql 포트
  selector:
    app: mysql
