k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
#spec:
#  selector:
#    app: backend
#  ports:
#    - port: 8080
#      targetPort: 8080

spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
