k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx  # 1번에서 찾은 값 입력
spec:
  rules:
    - host: www.alsideproject.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend
                port:
                  number: 80
